<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_quizz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="50dp"
    android:paddingLeft="20dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="50dp"
    tools:context="com.home.croaton.followme.activities.QuizzActivity"
    android:background="@color/black"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center">
    <TextView
        style="@style/description_style"
        android:id="@+id/textView"
        android:layout_marginBottom="32dp"
        android:text="@string/guess_melody_task_description"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="24dp"
        android:textStyle="italic" />



    <Button
        style="@style/questionButton_style"
        android:id="@+id/guessMelody_option1"
        android:onClick="onTryingAnswer"
        android:text="@string/Mamma_Mia"
        android:layout_marginBottom="8dp" />

    <Button
        style="@style/questionButton_style"
        android:id="@+id/guessMelody_option2"
        android:onClick="onTryingAnswer"
        android:text="@string/Happy_New_Year"
        android:layout_marginBottom="8dp" />


    <Button
        style="@style/questionButton_style"
        android:id="@+id/guessMelody_option3"
        android:onClick="onTryingAnswer"
        android:text="@string/Dancing_Queen"
        android:layout_marginBottom="8dp" />

    <Button
        style="@style/questionButton_style"
        android:id="@+id/guessMelody_option4"
        android:layout_width="150dp"
        android:layout_height="72dp"
        android:onClick="onTryingAnswer"
        android:text="@string/I_Am_Just_a_Girl"
        android:layout_marginBottom="8dp" />




    </LinearLayout>
</RelativeLayout>
